--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <header>
             <h1>Plausible Deniability</h1>
             <p>GitHub Subdomain Registration</p>
-            <p><em>"I have no idea how that got on my website, officer!"</em> 🕵️‍♂️</p>
+            <p><em>"I have no idea how that got on my website, your honour!"</em> 👨‍⚖️ </p>
         </header>
         
         <div class="info-box">
